Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -446,22 +446,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Art Vandelay'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "name # 'Liz Kaplan'"
+    "name = 'Liz Kaplan'"
    ]
   },
   {
@@ -472,7 +461,7 @@
    },
    "outputs": [],
    "source": [
-    "email # 'liz@ka-plan.com'"
+    "email  'liz@ka-plan.com'"
    ]
   },
   {
