Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -461,7 +461,7 @@
    },
    "outputs": [],
    "source": [
-    "email  'liz@ka-plan.com'"
+    "email = 'liz@ka-plan.com'"
    ]
   },
   {
@@ -473,16 +473,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Send an email to Art Vandelay at art.vandelay@vandelay.com to say how nice it was meeting yesterday.'"
+       "'Send an email to Liz Kaplan at art.vandelay@vandelay.com to say how nice it was meeting yesterday.'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
