--- a/index.ipynb
+++ b/index.ipynb
@@ -605,13 +605,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "name"
+    "name = 'Rocky'"
    ]
   },
   {
